--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "basicPokedex",
+  "name": "PokemonProject",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "react": "17.0.1",
     "react-native": "0.64.1"
   },
